...
                    }
                }

                OutlinedTextField(
                    value = name,
                    onValueChange = { name = it },
                    label = { Text("Nombre del Producto *") },
                    placeholder = { Text("Ej. Lomo Saltado Criollo") },
                    modifier = Modifier.fillMaxWidth(),
                )

                OutlinedTextField(
                    value = description,
                    onValueChange = { description = it },
                    label = { Text("Descripción") },
                    placeholder = { Text("Ej. Trozos de lomo de res salteados al wok con cebolla y tomate.") },
                    modifier = Modifier.fillMaxWidth(),
                    minLines = 2,
                )

                Row(
...
